# octoprint-client-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
octoprint-client/: Cargo.toml
octoprint-client/src/octoprintclient/: datamodel.rs  mod.rs
src/: main.rs  octoprintclient.rs
src/octoprintclient/: datamodel.rs  mod.rs
tests/: docker-compose.yml  get-apikey.sh  prepare-server.sh  prepare_server.sh  shutdown-server.sh
xtask/: Cargo.toml
xtask/src/: main.rs
