[package]
name = "octoprint-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.79"
dialoguer = "0.10.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.56"
time-humanize = "0.1.3"
